change the env template to cht local defaults

--- a/env.template
+++ b/env.template
@@ -7,13 +7,13 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=data
 POSTGRES_SCHEMA=v1
 POSTGRES_TABLE=medic # for dbt use only
-POSTGRES_HOST=someip # Your postgres instance IP or endpoint in "prod".
+POSTGRES_HOST=postgres # Your postgres instance IP or endpoint in "prod".
 POSTGRES_PORT=5432
 
 # dbt
 DBT_POSTGRES_USER=postgres
 DBT_POSTGRES_PASSWORD=postgres
-DBT_POSTGRES_SCHEMA=dbt
+DBT_POSTGRES_SCHEMA=v1
 DBT_POSTGRES_HOST=postgres # Your postgres instance IP or endpoint in "prod".
 CHT_PIPELINE_BRANCH_URL="https://github.com/medic/cht-pipeline.git#main"
 DATAEMON_INTERVAL=5
@@ -22,6 +22,6 @@ DATAEMON_INTERVAL=5
 COUCHDB_USER=medic
 COUCHDB_PASSWORD=password
 COUCHDB_DBS="medic" # space separated list of databases you want to sync e.g "medic medic_sentinel"
-COUCHDB_HOST=couchdb
+COUCHDB_HOST=host.docker.internal
 COUCHDB_PORT=5984
 COUCHDB_SECURE=false
