--- a/env.template
+++ b/env.template
@@ -22,6 +22,6 @@ DATAEMON_INTERVAL=5
 COUCHDB_USER=medic
 COUCHDB_PASSWORD=password
 COUCHDB_DBS="medic" # space separated list of databases you want to sync e.g "medic medic_sentinel"
-COUCHDB_HOST=host.docker.internal
+COUCHDB_HOST=couchdb
 COUCHDB_PORT=5984
 COUCHDB_SECURE=false
