--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -28,3 +28,7 @@ services:
       - "${PGADMIN_PORT:-5050}:80"
     networks:
       cht-net:
+
+networks:
+  cht-net:
+    name: ${CHT_NETWORK:-cht-net}
