--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -9,3 +9,7 @@ target-path: "target"
 clean-targets: ["target", "dbt_modules"]
 macro-paths: ["macros"]
 log-path: "logs"
+
+# Include both your seeds and package seeds
+seed-paths:
+  - seeds
