--- a/dbt/Dockerfile
+++ b/dbt/Dockerfile
@@ -17,8 +17,7 @@ WORKDIR /dbt/
 COPY dbt-run.py dbt-run.py
 COPY .dbt .dbt
 COPY dbt_project.yml dbt_project.yml
-RUN mkdir seeds
-COPY seeds/locations.csv seeds/locations.csv
+COPY seeds seeds
 
 RUN mkdir old_manifest
 
