Add the phone numbers needed for end to end monitoring in Jamaica

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - POSTGRES_SCHEMA=${DBT_POSTGRES_SCHEMA}
       - ROOT_POSTGRES_SCHEMA=${POSTGRES_SCHEMA}
       - CHT_PIPELINE_BRANCH_URL=${CHT_PIPELINE_BRANCH_URL}
+      - MONITORING_PHONE_DIGICEL=${MONITORING_PHONE_DIGICEL}
+      - MONITORING_PHONE_FLOW=${MONITORING_PHONE_FLOW}
       - DATAEMON_INTERVAL=${DATAEMON_INTERVAL}
       - DBT_PACKAGE_TARBALL_URL=${DBT_PACKAGE_TARBALL_URL}
     networks:
