--- a/env.template
+++ b/env.template
@@ -1,6 +1,10 @@
 # (Optional) project wide
 COMPOSE_PROJECT_NAME=pipeline
 
+# phones to assist in end to end testing
+MONITORING_PHONE_DIGICEL=+18763599318
+MONITORING_PHONE_FLOW=+18763186929
+
 # postgresql
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
