--- a/env.template
+++ b/env.template
@@ -19,7 +19,8 @@ DBT_POSTGRES_USER=postgres
 DBT_POSTGRES_PASSWORD=postgres
 DBT_POSTGRES_SCHEMA=v1
 DBT_POSTGRES_HOST=postgres # Your postgres instance IP or endpoint in "prod".
-CHT_PIPELINE_BRANCH_URL="https://github.com/medic/cht-pipeline.git#main"
+# CHT_PIPELINE_BRANCH_URL="https://github.com/medic/cht-pipeline.git#main"
+CHT_PIPELINE_BRANCH_URL="https://github.com/mherman22/cht-pipeline.git#monitorb"
 DATAEMON_INTERVAL=5
 
 # couchdb
